--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_PASSWORD=lastchild
 DB_NAME = dbtest.db
 
 #env local memchaced
-MEMCHACED_DB = localhost:11211
+MEMCACHED_DB = localhost:11211
 ACTIVE_PORT=8080
 # There is three GIN_MODE:
 # -debug
